--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "framer-motion": "^6.2.8",
     "highlight.js": "^11.5.0",
     "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "immutable": "^4.0.0",
